--- a/src/vanilla-js/index.html
+++ b/src/vanilla-js/index.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/scrollama"></script>
     
       <!-- Page Header -->
-    <header class="masthead" style="background-image: url('images/chicago.jpg')">
+    <header class="masthead" style="background-image: url('./images/chicago.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -34,7 +34,7 @@
           height: 100%;
           padding: 60px;
           text-align: center;
-          background: image: url('images/chicago.jpg');
+          background: image: url('./images/chicago.jpg');
           color: white;
           font-size: 26px;
         }
