--- a/src/vanilla-js/index.html
+++ b/src/vanilla-js/index.html
@@ -129,6 +129,10 @@
         </style>
 </head>
 <body>
+    
+<div id="chart">
+  <iframe width="730" height="500" src="./images/rentburden_pie.html" frameborder="0"></iframe>
+</div>
 
 <div id="map"></div>
 <div id="story"></div>
