--- a/src/vanilla-js/index.html
+++ b/src/vanilla-js/index.html
@@ -20,6 +20,13 @@
               <h1>From Vacant Lots to Permanently Affordable Housing</h1>
               <h2>Leveraging vacant properties in Chicago for affordable housing.</h2>
               <span class="subheading"><b>By Jennah Haque, Chenab Navalkha, and Asher Simon</span>
+              <h4>Taking inspiration from recent gains by housing activists in Philadelphia, PA and Oakland, CA, this
+                project focuses on analyzing city- and county-held vacant properties in Chicago, IL and puts forth a speculative
+                vision of how the City of Chicago might transform these properties into community-controlled, permanently affordable Housing
+                in the form of a Community Land Trust.<br><br>
+                We examine spatial patterns of rent burden, eviction and homelessness, and relate this to the location of current affordable housing
+                in order to better understand how housing insecurity in Chicago could be mediated through reallocation of vacant properties
+                into community-held housing.</h4>
             </div>
           </div>
         </div>
@@ -37,6 +44,12 @@
           background: image: url('./images/chicago.jpg');
           color: white;
           font-size: 26px;
+        }
+        
+          h4 {
+          font-size:30px;
+          font-weight:100;
+          line-height:1.3;
         }
         
         body {
